# TAIFEXPacketParser

./: CMakeLists.txt  I010.csv  I012.csv  I020.csv  I080.csv  README.md  build.bat  main_single.cpp  多執行緒說明.md  系統物件圖.txt  系統設計文件.md  資料夾架構.txt  資料處理流程圖.txt  陳鈺翔_系統說明文件.md
doc/: 系統物件圖.txt
include/base/: ParsedResultBase.h  TAIFEXParserInterface.h
include/common/: FixedArray.h  TBCD.h
include/controller/: HeaderParser.h  TAIFEXPacketParser.h
include/data/: I010Packet.h  I012Packet.h  I020Packet.h  I080Packet.h  MatchInfo.h  OrderBookInfo.h  PriceBandInfo.h  ProductInfo.h
include/dispatcher/: PacketDispatcher.h
include/parser/: I010Parser.h  I012Parser.h  I020Parser.h  I080Parser.h
include/protocol/: CommonHeader.h
include/result/: ParsedResultBaseImpl.hpp
include/storage/: TAIFEXMemoryDatabase.h
src/: main.cpp  main_multi.cpp  main_single.cpp
src/controller/: HeaderParser.cpp  TAIFEXPacketParser.cpp
src/data/: I010Packet.cpp  I012Packet.cpp  I020Packet.cpp  I080Packet.cpp
src/dispatcher/: PacketDispatcher.cpp
src/parser/: I010Parser.cpp  I012Parser.cpp  I020Parser.cpp  I080Parser.cpp
src/storage/: TAIFEXMemoryDatabase.cpp
